# ml_cpp

./: CMakeLists.txt  README.md
data/: points.txt
include/: attention.h  eigen_self_attention.hpp  gradient_descent.h  kmeans.h  point.h  self_attention.hpp
include/transformer/: linear.hpp  relu.hpp  softmax.hpp
src/: attention.cpp  autodiff.cpp  eigen_self_attention.cpp  gradient_descent.cpp  kmeans.cpp  main.cpp  self_attention.cpp
